css/general/home.css
/* ------------------------------------------ */
/* General styling */
/* ------------------------------------------ */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.hero-section {
    /* background-color: #FDD93D; */
    height: 80vh;
    margin-bottom: 12vh;
    padding-top: 10vh;
    padding-bottom: 10vh;
    padding-left: 8%;
    padding-right: 5%;
    border-radius: 15px;
    display: grid;
    grid-template-columns: 4fr 2.5fr;
    grid-column-gap: 5%;
    align-items: center;
}

.diary-logo{
    max-width: 90%;
    /* border-radius: 50%; */
}

/* ------------------------------------------ */
/* Responsive styling */
/* ------------------------------------------ */

@media (max-width: 680px) {
    .hero-section {
        padding-left: 12%;
        padding-right: 12%;
        grid-template-columns: 1fr;
    }

    .profile-logo {
        max-width: 100%;
        margin-top: 50px;
    }
}

